# ai-research-navigator

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  complete_corpus.py  docker-compose.yml  evaluation_report.json  pyproject.toml  pytest.ini
docs/: ARCHITECTURE.md  CITATION_RUBRIC.md  M3_DESIGN_NOTES.md  M4_EVALUATION_REPORT.md
docs/adrs/: ADR-001-chunking.md  ADR-002-embedding-model.md  ADR-003-hybrid-fusion.md  ADR-004-refusal-threshold.md
documents/lab-blogs/: anthropic-mapping-mind-2024-05.md
src/research_navigator/agents/: graph.py  router.py  state.py  tools.py
src/research_navigator/config/: settings.py
src/research_navigator/ingest/: chunker.py  (+4 more)
src/tests/: create_collection.py  delete_collection.py  test_abstract.py  test_answer_generator.py  test_bm25.py  test_chunk_id.py  test_chunk_model.py  test_chunk_model_pytest.py  test_chunk_sections.py  test_chunker.py  test_citation_builder.py  test_compare_approaches.py  test_concept_explanation.py  test_content_hash.py  test_context_builder.py  test_dense_attention.py  test_document_model.py  test_embeddings.py  test_fallback.py  test_filter_builder.py  test_filtered_retrieval.py  test_find_papers.py  test_graph.py  test_graph_execution.py  test_graph_visualization.py  test_hybrid_retriever.py  test_m2_evaluation.py  test_m3_routes.py  test_manifest.py  test_manifest_document.py  test_paper_deep_dive.py  test_paper_lookup.py  test_paper_retrieval.py  test_payload.py  test_payload_keys.py  test_pdf_parser.py  test_pdf_sections.py  test_pipeline.py  test_qdrant_insert.py  test_qdrant_search.py  (+11 more)
(+30 files in other folders)
